# docserve

./: .gitignore  .gitmodules  README.md  config.json  example.graphql  main.py  new_model_config.json  run.sh
assets/: documented_schema.graphql
docserve/: .env.example  docserve.sh  intro.sh  pyproject.toml
docserve/docserve/: main.py
